--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 	            <span class="icon-bar"></span>
 	            <span class="icon-bar"></span>
 	          </button>
-	          <a class="brand" href="#">Bitstarter</a>
+	          <a class="brand" href="#">Timecapso</a>
 	          <div class="nav-collapse collapse">
 	            <ul class="nav">
 	              <li class="active"><a href="#">Home</a></li>
@@ -131,23 +131,29 @@
 	      <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
 	      <div class="row-fluid heading">
 	        <div class="span12">
-	          <h1>Product</h1>
+	          <h1>Timecapso</h1>
 	        </div>
 	      </div> 
 	      <div class="row-fluid subheading">
 	        <div class="span12">
 	          <!-- Special typography from Bootstrap for lead paragraph. -->
 	          <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-	          <p class="lead">One sentence description.</p>
+	          <!-- <p class="lead">Timecapsule for your memories</p> -->
+	          <p class="lead">For your priceless memories</p>
 	        </div>
 	      </div>
+
 	      <div class="row-fluid pitch">
-	        <div class="span5 offset1 video">
-	          <img class="img-polaroid" src="http://placehold.it/480x300">
+	        <div class="span5 offset1" style="text-align:justify;">
+	        	<p>
+	            Time Capsules are a way of passing the information to the future.The concept behind the Time Capsules are, a collection of valuable goods are burried under the ground for years and then later opened/recoverd on a future date.First modern <a>time capsule</a> was prepared by Westinghouse on the eve of 1939 New York World's Fair and will be opened on 6939.
+	            <br/>
+	            But today after decades of first time capsule, it is now possible to have <b>virtual time capsules</b>.You upload you valuable photos,videos,documents on to a server.We keep it safe on our servers for 20 years and deliver it you
+	          </p>
 	        </div>
 
 	        <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
-	        <div class="span5 actions">
+	        <div class="span5  actions">
 	          <div class="span8 offset2">
 	            <div class="statistics">
 	              <div class="span4">
@@ -155,17 +161,17 @@
 	                different in horizontal and vertical layouts, illustrating
 	                media queries. -->
 	                <div class="linediv-l">
-	                <h3>1000</h3> <p>backers</p>
+	                <h3>0</h3> <p>backers</p>
 	                </div>
 	              </div>
 	              <div class="span4">
 	                <div class="linediv-c">
-	                  <h3>$6000</h3> <p>of $10,000</p>
+	                  <h3>$0</h3> <p>of $10,000</p>
 	                </div>
 	              </div>
 	              <div class="span4">
 	                <div class="linediv-r">
-	                <h3>10</h3> <p>days left</p>
+	                <h3>100</h3> <p>days left</p>
 	                </div>
 	              </div>
 	            </div>
@@ -190,6 +196,8 @@
 	            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
 	          </div>
 	        </div>
+
+	        
 	      </div>
 
 	      <!-- Beyond this part the marketing copy begins. -->
@@ -197,44 +205,22 @@
 	      <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
 	      <!-- http://placehold.it -->
 	      <div class="row-fluid section1">
-	        <div class="span5 offset1 asset">
+<!-- 	        <div class="span5 offset1 asset">
 	          <img class="img-polaroid" src="http://placehold.it/480x300">
-	        </div>
-	        <div class="span5 copy">
+	        </div> -->
+	        <div class="span5 offset1 copy">
+	        <h4>How does it work?</h4>
 	          <p>
-	            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-	            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-	            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-	            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-	            volutpat lorem ut congue malesuada. In facilisis scelerisque
-	            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-	            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-	            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-	            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-	            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-	            nunc. Fusce nec egestas sem. Donec fringilla.
+	          	
+	            You get a virtual time capsule with a space of 2GB(550 Images).This virtual time capsule has a time limit of 30 days after which it will be sealed for 20 years and stored on our servers.After 20 long years you get a mail in you Inbox with a link to retrive your time capsule and relive the moments of your life.
 	          </p>
 	        </div>
-	      </div>
-
-	      <div class="row-fluid section2">
-	        <div class="span5 offset1 copy copy-right">
+	        <div class="span5  copy copy-right">
+	        <h4>Why do you need one?</h4>
 	          <p>
-	            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-	            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-	            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-	            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-	            volutpat lorem ut congue malesuada. In facilisis scelerisque
-	            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-	            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-	            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-	            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-	            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-	            nunc. Fusce nec egestas sem. Donec fringilla.
+	           	Technology advancements happen all the time.You migh be using a PC, Laptop, Tablets, Mobile, Google Glass, etc. And We dont know what coming next.As soon as the next big thing arrives we move on.And Whil we move on we lose our priceless memories.
+	           	Do you still have all photos you took in last 5 years?
 	          </p>
-	        </div>
-	        <div class="span5 asset">
-	          <img class="img-polaroid" src="http://placehold.it/480x300">
 	        </div>
 	      </div>
 
@@ -249,12 +235,12 @@
 	                <div class="accordion-heading">
 	                  <a class="accordion-toggle" data-toggle="collapse"
 	                     data-parent="#accordion2" href="#collapseOne">
-	                    What does FAQ stand for?
+	                    How will Timecapo find me after 20 Years?
 	                  </a>
 	                </div>
 	                <div id="collapseOne" class="accordion-body collapse">
 	                  <div class="accordion-inner">
-	                    Frequently Asked Question.
+	                    Timecapso will collect you email address,Alternative email Address,Physical address,Facebook URL,Friends Email Address .I these information is enough to find you in after 20 years.
 	                  </div>
 	                </div>
 	              </div>
@@ -262,12 +248,25 @@
 	                <div class="accordion-heading">
 	                  <a class="accordion-toggle" data-toggle="collapse"
 	                     data-parent="#accordion2" href="#collapseTwo">
-	                    What's a Frequently Asked Question?
+	                    Can I make a Time Capsule for someone else?
 	                  </a>
 	                </div>
 	                <div id="collapseTwo" class="accordion-body collapse">
 	                  <div class="accordion-inner">
-	                    A question which is commonly asked by users.
+	                    Yes,You can make a time capsule that will be recived by your freind or family after 20 years.But when you create the time capsule they will be asked to confirm if the wish to receive a time capsule.
+	                  </div>
+	                </div>
+	              </div>
+	              <div class="accordion-group">
+	                <div class="accordion-heading">
+	                  <a class="accordion-toggle" data-toggle="collapse"
+	                     data-parent="#accordion2" href="#collapseThree">
+	                    Can I get Timecapsule delivered to my address?
+	                  </a>
+	                </div>
+	                <div id="collapseThree" class="accordion-body collapse">
+	                  <div class="accordion-inner">
+	                    Yes and No, well you need to specify that you would like to receive time capsule in physical form.Physical form includes copying your time capsule in a USB drive and delivered to you by mail.But for this extra charges may be applicable, which should be paid before receiving the capsule.Also will depend on future availability of resources.You do not have to pay extra amount for physical drive right away.
 	                  </div>
 	                </div>
 	              </div>
@@ -280,11 +279,7 @@
 	      <!-- http://creativecommons.org/licenses/ -->
 	      <div class="row-fluid footer">
 	        <div class="span12">
-	          <p>This work is licensed under
-	            the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
-	              By-SA 3.0
-	            </a>, without all the cruft that would otherwise be
-	            put at the bottom of the page.</p>
+	          <p>&copy; Timecapso.com</p>
 	        </div>
 	      </div>
 	    </div>
