Fixed a small link

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 	      <div class="row-fluid pitch">
 	        <div class="span5 offset1" style="text-align:justify;">
 	        	<p>
-	            Time Capsules are a way of passing the information to the future.The concept behind the Time Capsules are, a collection of valuable goods are burried under the ground for years and then later opened/recoverd on a future date.First modern <a>time capsule</a> was prepared by Westinghouse on the eve of 1939 New York World's Fair and will be opened on 6939.
+	            Time Capsules are a way of passing the information to the future.The concept behind the Time Capsules are, a collection of valuable goods are burried under the ground for years and then later opened/recoverd on a future date.First modern time capsule was prepared by Westinghouse on the eve of 1939 New York World's Fair and will be opened on 6939.
 	            <br/>
 	            But today after decades of first time capsule, it is now possible to have <b>virtual time capsules</b>.You upload you valuable photos,videos,documents on to a server.We keep it safe on our servers for 20 years and deliver it you
 	          </p>
