Completed Adding Bitcoin

--- a/index.html
+++ b/index.html
@@ -185,8 +185,12 @@
 		          		</div>
 		          	</div>
 		          	<div class="row-fluid">
-		          		<div class="span6 offset3 order">
-		          			<button class="btn btn-success btn-large">Preorder</button>
+		          		<div class="span5 offset4 order">
+		          			<a class="coinbase-button" data-code="48423cecde374210df93271f77a40f53" data-button-style="custom_small" href="https://coinbase.com/checkouts/48423cecde374210df93271f77a40f53">
+		          				Pay With Bitcoin
+	          				</a>
+	          				<script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+		          			<!-- <button class="btn btn-success btn-large">Preorder</button> -->
 		          		</div>
 		          		  
 		          	</div>
