Added paypal button

--- a/index.html
+++ b/index.html
@@ -161,17 +161,17 @@
 	        		  <div class="row-fluid statistics">
 	        		    <div class="span4">
 	        		      <div class="linediv-l">
-	        		      <h3>0</h3> <p>backers</p>
+	        		      <h3>1</h3> <p>backers</p>
 	        		      </div>
 	        		    </div>
 	        		    <div class="span4">
 	        		      <div class="linediv-c">
-	        		        <h3>$0</h3> <p>of $15,000</p>
+	        		        <h3>$30</h3> <p>of $15,000</p>
 	        		      </div>
 	        		    </div>
 	        		    <div class="span4">
 	        		      <div class="linediv-r">
-	        		      <h3>100</h3> <p>days left</p>
+	        		      <h3>60</h3> <p>days left</p>
 	        		      </div>
 	        		    </div>
 	        		  </div>
@@ -184,15 +184,28 @@
 		          		  </div>
 		          		</div>
 		          	</div>
-		          	<div class="row-fluid">
-		          		<div class="span5 offset4 order">
-		          			<a class="coinbase-button" data-code="48423cecde374210df93271f77a40f53" data-button-style="custom_small" href="https://coinbase.com/checkouts/48423cecde374210df93271f77a40f53">
+		          	<div class="row-fluid pagination-centered ">
+		          		<div class="span4 offset4">
+		          			<a class="coinbase-button" data-code="8707e0108a53a96e4a1c849e236b1b47" data-button-style="custom_small" href="https://coinbase.com/checkouts/8707e0108a53a96e4a1c849e236b1b47">
 		          				Pay With Bitcoin
 	          				</a>
 	          				<script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+		          			<!--<a class="coinbase-button" data-code="48423cecde374210df93271f77a40f53" data-button-style="custom_small" href="https://coinbase.com/checkouts/48423cecde374210df93271f77a40f53">
+		          				Pay With Bitcoin
+	          				</a>
+	          				<script src="https://coinbase.com/assets/button.js" type="text/javascript"></script> -->
 		          			<!-- <button class="btn btn-success btn-large">Preorder</button> -->
 		          		</div>
-		          		  
+		          	</div>
+		          	<div class="row-fluid pagination-centered">
+  		          		<div class="span4 offset4">
+  		          			<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+  			          			<input type="hidden" name="cmd" value="_s-xclick">
+  			          			<input type="hidden" name="hosted_button_id" value="F6K2HEKEWBC6E">
+  			          			<input type="image" src="buy_now.png" border="0" name="submit" alt="PayPal – The safer, easier way to pay online.">
+  			          			<img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+  		          			</form>
+  		          		</div>
 		          	</div>
 					<div class="row-fluid">
 						<div class="span8 offset2 social">
@@ -217,7 +230,7 @@
 	        <div class="span5 offset1 copy">
 	        <h4>How does it work?</h4>
 	          <p>
-	            You get a virtual time capsule with a space of 2GB(550 Images).This virtual time capsule has a time limit of 30 days after which it will be sealed for 20 years and stored on our servers.After 20 long years you get a mail in you Inbox with a link to retrive your time capsule and relive the moments of your life.
+	            You get a virtual time capsule with a space of 200 files.This virtual time capsule has a time limit of 30 days after which it will be sealed for 20 years and stored on our servers.After 20 long years you get a mail in you Inbox with a link to retrive your time capsule and relive the moments of your life.
 	          </p>
 	        </div>
 	        <div class="span5  copy copy-right">
@@ -241,7 +254,8 @@
 	                </div>
 	                <div id="collapseOne" class="accordion-body collapse">
 	                  <div class="accordion-inner">
-	                    Timecapso will collect you email address,Alternative email Address,Physical address,Facebook URL,Friends Email Address .I these information is enough to find you in after 20 years.
+	                    Timecapso will collect you email address,Alternative email Address,Physical address,Facebook URL,Friends Email Address .It is enough to find you in after 20 years.
+	                    Also we will send you email every year to verify all the details.
 	                  </div>
 	                </div>
 	              </div>
